--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,11 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <%= f.label :username %><br />
+    <%= f.text_field :username %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
@@ -20,6 +25,16 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
+
+  <%#= f.fields_for :creators do |al| %><!-- ここから子レコードcreatorに入力する内容 -->
+  <!--以下１：多の子モデルcreatorへ入力する内容 -->
+  <!--userモデルに送るform_forとは別にcreatorに送るフォームを作成。resource(ユーザー)の子creatorを１対多で作成 -->
+  <%= f.fields_for :creators, resource.creators.build || Creator.new do |al| %>
+    <div class="field">
+      <%= al.label :creator %>
+      <%= al.text_field :name %>
+    </div>
+  <% end %>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
