--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -1,9 +1,31 @@
 <h1>クリエイター詳細</h1>
 
 <div class = "creator-detail">
-  <p><%= @creator.name %></p>
-  <p>Icon:</p>
   <div class = "image">
     <%= image_tag @creator.icon.url %>
   </div>
+  <p>
+    <%= @creator.name %>
+  </p>
+  <p>
+    <span><%= link_to edit_creator_path(@creator.id) do %></span>
+      <i class="fas fa-palette fa-lg" ></i>
+      <span>クリエイター情報を編集する</span>
+    <% end %>
+  </p>
+  <p>
+    <span><%= link_to "#" do %></span>
+      <i class="far fa-images fa-lg"></i>
+      <span>自分の作品を見る</span>
+    <% end %>
+  </p>
+  <br>
+  <p>
+    <span><%= link_to "#" do %></span>
+      <i class="fas fa-exclamation-triangle fa-lg"></i>
+      <span>クリエイター情報を削除する</span>
+    <% end %>
+  </p>
+
+  
 </div>
