--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -1,12 +1,32 @@
-<h2>作品一覧<h2>
+<div class = "container">
+  <h2>みんなの作品<h2>
 
-<div>
-  <% @artworks.each do |artwork| %>
-    <p><%= image_tag artwork.image.url %></p>
-    <p><%= artwork.creator.name %></p>
-    <%# renderを利用してパーシャルファイルで処理する %>
-    <%# tag_listにtask.tag_listで取り出したタグをパラメータとして渡す %>
-    <p><%= render 'artworks/tag_list', tag_list: artwork.folder_list %></p>
-  <% end %>
+  <div class = "artwork-index">
+    <div class= "row">
+      <% @artworks.each do |artwork| %>
+      <div class = "col-xs-12 col-sm-6 col-md-4">
+        <div class = "thumbnail">
+          <div class = "artwork">
+          <%= link_to artwork do%>
+            <p class = "image">
+              <%= image_tag artwork.image.url %>
+            </p>
+            <p class = "creator-name">
+              <%= artwork.creator.name %>
+            </p>
+            <p class="date">
+              <%= artwork.created_at.strftime("%Y-%m-%d %H:%M ") %>
+            </p>
+            <%# renderを利用してパーシャルファイルで処理する %>
+            <%# tag_listにtask.tag_listで取り出したタグをパラメータとして渡す %>
+            <!--<p>
+              <%= render 'artworks/tag_list', tag_list: artwork.folder_list %>
+            </p> -->
+          <% end %>
+          </div>
+        </div>
+      </div>
+      <% end %>      
+    </div>
+  </div>
 </div>
-
