--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -1,7 +1,8 @@
-<div class = "container">
-  <h2>みんなの作品<h2>
+<div class = "artworks-index">
+  <div class = "container">
 
-  <div class = "artwork-index">
+    <h3>みんなの作品</h3>
+
     <div class= "row">
       <% @artworks.each do |artwork| %>
       <div class = "col-xs-12 col-sm-6 col-md-4">
@@ -14,7 +15,7 @@
             <p class = "creator-name">
               <%= artwork.creator.name %>
             </p>
-            <p class="date">
+            <p class = "date">
               <%= artwork.created_at.strftime("%Y-%m-%d %H:%M ") %>
             </p>
             <%# renderを利用してパーシャルファイルで処理する %>
