--- a/app/assets/stylesheets/artworks.scss
+++ b/app/assets/stylesheets/artworks.scss
@@ -1,3 +1,31 @@
+html {
+  min-height: 100%;
+  position: relative;
+  font-size: 62.5%;
+}
+
+body {
+  height: 100%;
+}
+
+.navbar {
+  width: 100%;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  position: fixed;
+  /* デフォルトで設定されている角丸を無効にする*/
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  font-size: 1.5rem;
+}
+
+.header {
+  margin-bottom: 60px;
+}
+
+
 .artworks-index,.creator-artworks-index {
   h3 {
     text-align: center;
@@ -19,14 +47,13 @@
 
   .creator-name {
     color: #000;
-    font-size: 180%;
+    font-size: 2.8rem;
     font-weight:bold;
     text-align: center;
   }
   .date {
     color: #000;
-    // font-size: 60%;
-    font-weight:bold;
+    // font-weight:bold;
     text-align: center;
   }
   .folder-list {
@@ -34,10 +61,10 @@
       font-weight: bold;
     }
     .folder-list {
-      font-size: 120%;
+      font-size: 1.5rem;
     } 
     .folder-name {
-      font-size: 120%;
+      font-size: 1.5rem;
     }
   }
 }
@@ -66,4 +93,78 @@
         display: block!important;
     }
   }
+}
+
+.artwork-detail {
+  .artwork {
+    display: block;
+    padding: 15px;
+    margin-bottom: 20px;
+    line-height: 1.42857143;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    transition: border .2s ease-in-out;
+    box-sizing: border-box;
+    box-shadow: 0 1px 2px rgba(0,0,0,.075);
+    margin: 0 auto;
+  }
+
+  .creator-name {
+    color: #000;
+    font-size: 2.8rem;
+    font-weight: bold;
+    text-align: left;
+    margin-left: 4%;
+  }
+
+  .caption {
+    color: #000;
+    font-size: 2rem;
+    // font-weight: bold;
+    text-align: left;
+    margin-left: 4%;
+    margin-right: 4%;
+  
+
+    p {
+      word-wrap: break-word;
+    }
+  }
+
+  .created-date {
+    color: #000;
+    font-size: 1.8rem;
+    // font-weight: bold;
+    text-align: left;
+    margin-left: 4%;
+  }
+
+  .date {
+    color: #000;
+    // font-weight: bold;
+    text-align: left;
+    margin-left: 4%;
+  }
+
+  .buttons {
+    text-align: right;
+    width: 100%;
+    font-size: 1.5rem;
+    margin-right: 2%;
+  }
+  
+  .delete_button {
+    display: inline-block;
+    padding: 12px;
+  }
+  
+  .edit_button {
+    display: inline-block;
+    padding: 12px;
+  }
+  a {
+    color: #000;
+  }
+
 }
