--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,50 +26,52 @@
   </head>
 
   <body>
-     <nav class="navbar navbar-default">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
-              <span class="sr-only">Bootstrap</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/artworks/">さくひんBOX</a>
+    <header class="header">
+      <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#gnavi">
+                <span class="sr-only">Bootstrap</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="/artworks/">さくひんBOX</a>
+            </div>
+            <div id="gnavi" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                <li><a href="/artworks/">みんなの作品</a></li>
+
+                  <%# ログイン中の場合 %>
+                  <% if user_signed_in? %>
+                    <li><%= link_to "作品投稿", new_artwork_path %></li>
+
+                    <%# ドロップダウンリストを表示 %>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">クリエイター<span class="caret"></span></a>
+                      <ul class="dropdown-menu" role="menu">
+
+                        <%# ログインしているユーザーのクリエイターをドロップダウンで表示させる %>
+                        <% current_user.creators.each do |creator| %>
+                        <li><a href="/creators/<%= creator.id %>"><%= creator.name %></a></li>
+                        <% end %>
+
+                        <li class="divider"></li>
+                        <li><a href="/creators/new">クリエイターを登録する</a></li>
+                      </ul>
+                    </li>
+
+                    <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+                  <% else %>
+                    <%# ログインしていない場合 %>
+                    <li><%= link_to "新規登録", new_user_registration_path %></li>
+                    <li><%= link_to "ログイン", new_user_session_path %></li>
+                  <% end %>
+              </ul>
+            </div>
           </div>
-          <div id="gnavi" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="/artworks/">みんなの作品</a></li>
-
-                <%# ログイン中の場合 %>
-                <% if user_signed_in? %>
-                  <li><%= link_to "作品投稿", new_artwork_path %></li>
-
-                  <%# ドロップダウンリストを表示 %>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">クリエイター<span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-
-                      <%# ログインしているユーザーのクリエイターをドロップダウンで表示させる %>
-                      <% current_user.creators.each do |creator| %>
-                      <li><a href="/creators/<%= creator.id %>"><%= creator.name %></a></li>
-                      <% end %>
-
-                      <li class="divider"></li>
-		                  <li><a href="/creators/new">クリエイターを登録する</a></li>
-                    </ul>
-                  </li>
-
-                  <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
-                <% else %>
-                  <%# ログインしていない場合 %>
-                  <li><%= link_to "新規登録", new_user_registration_path %></li>
-                  <li><%= link_to "ログイン", new_user_session_path %></li>
-                <% end %>
-            </ul>
-          </div>
-        </div>
-      </nav>
+        </nav>
+      </header>
 
       <% if notice %>
         <p class="alert alert-notice"><%= notice %></p>
