--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -16,7 +16,7 @@
   </p>
   <p>
     <%# @creator は @creator.id のこと%>
-    <%# creator_artworks_path(@creator) によって id 付きで artworks#index が呼ばれる %>
+    <%# creator_artworks_path(@creator) によって creator の id 付きで artworks#index が呼ばれる %>
     <span><%= link_to creator_artworks_path(@creator) do %></span>
       <i class="far fa-images fa-lg"></i>
       <span>自分の作品を見る</span>
