artwork 投稿画面を修正

--- a/app/views/artworks/creator_index.html.erb
+++ b/app/views/artworks/creator_index.html.erb
@@ -22,6 +22,7 @@
             <% @folders.each do |folder| %>
               <!-- folder_artworks_path(folder.id) によって folder の id 付きで artworks#index が呼ばれる -->
               <%= link_to folder_artworks_path(folder.id) do %>
+              <%#= link_to folder_artworks_path(folder.id) do %>
                 <p class = "folder-name"><i class="far fa-folder"></i> <%= folder.folder_name %></p>
               <% end%>
             <% end%>
