--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="normalize.css">
+    <%# <link rel="stylesheet" href="normalize.css"> %>
     <meta name="viewport" content="width=device-width">
     
     <%# BootstrapをCDNで適用させる(CSS) %>
@@ -19,7 +19,7 @@
     <%# FontAwesomeをCDNで適用させる %>
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
+    <%# <link rel="stylesheet" href="style.css"> %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
