--- a/app/assets/stylesheets/artworks.scss
+++ b/app/assets/stylesheets/artworks.scss
@@ -180,7 +180,7 @@ body {
   }
 }
 
-.new-artwork {
+.new-artwork, .edit-artwork, .artwork-detail {
   h3 {
     text-align: center;
     font-weight: bold;
