作品詳細画面を修正

--- a/app/assets/stylesheets/artworks.scss
+++ b/app/assets/stylesheets/artworks.scss
@@ -171,6 +171,15 @@ body {
   }
 }
 
+.artwork-detail {
+  .post {
+    margin: 50px;
+  }
+  .back-button {
+    margin-bottom: 50px;
+  }
+}
+
 .artwork-form {
   ul {
   list-style: none;
