--- a/app/views/artworks/show.html.erb
+++ b/app/views/artworks/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class = "artwork-detail">
   <div class = "container">
-    <div class = "row">
+    <div class = "row post">
       <div class = "col-xs-12 col-sm-12 col-md-offset-2 col-md-8">
         <div class = "artwork">
           <p class = "image">
@@ -46,7 +46,6 @@
       </div>
     </div>
 
-    <br>
     <div class = "back-button">
       <%#= link_to '自分の作品', creator_artworks_path(@creator) %>
       <%= link_to 'Back', artworks_path %>
