--- a/app/views/creators/show.html.erb
+++ b/app/views/creators/show.html.erb
@@ -1,32 +1,42 @@
-<h1>クリエイター詳細</h1>
-
 <div class = "creator-detail">
-  <div class = "image">
-    <%= image_tag @creator.icon.url %>
+  <div class = "container">
+    <div class = "row creator-wrapper">
+      <div class = "col-md-offset-4 col-md-4">
+  
+        <p class = "image">
+          <%= image_tag @creator.icon.url %>
+        </p>
+        <p class = "creator-name">
+          <%= @creator.name %>
+        </p>
+
+          <div class = "creator-information">
+            <p>
+              <%# @creator は @creator.id のこと%>
+              <span><%= link_to edit_creator_path(@creator) do %></span>
+                <i class="fas fa-palette fa-lg" ></i>
+                <span>クリエイター情報を編集する</span>
+              <% end %>
+            </p>
+            <p>
+              <%# @creator は @creator.id のこと%>
+              <%# creator_artworks_path(@creator) によって creator の id 付きで artworks#index が呼ばれる %>
+              <span><%= link_to creator_artworks_path(@creator) do %></span>
+                <i class="far fa-images fa-lg"></i>
+                <span>自分の作品を見る</span>
+              <% end %>
+            </p>
+            <br>
+            <p>
+              <span><%= link_to "#" do %></span>
+                <i class="fas fa-exclamation-triangle fa-lg"></i>
+                <span>クリエイター情報を削除する</span>
+              <% end %>
+            </p>
+          </div>
+
+
+      </div>
+    </div>
   </div>
-  <p>
-    <%= @creator.name %>
-  </p>
-  <p>
-    <%# @creator は @creator.id のこと%>
-    <span><%= link_to edit_creator_path(@creator) do %></span>
-      <i class="fas fa-palette fa-lg" ></i>
-      <span>クリエイター情報を編集する</span>
-    <% end %>
-  </p>
-  <p>
-    <%# @creator は @creator.id のこと%>
-    <%# creator_artworks_path(@creator) によって creator の id 付きで artworks#index が呼ばれる %>
-    <span><%= link_to creator_artworks_path(@creator) do %></span>
-      <i class="far fa-images fa-lg"></i>
-      <span>自分の作品を見る</span>
-    <% end %>
-  </p>
-  <br>
-  <p>
-    <span><%= link_to "#" do %></span>
-      <i class="fas fa-exclamation-triangle fa-lg"></i>
-      <span>クリエイター情報を削除する</span>
-    <% end %>
-  </p>
 </div>
