--- a/app/views/creators/edit.html.erb
+++ b/app/views/creators/edit.html.erb
@@ -1,64 +1,11 @@
 <div class = "edit-creator">
   <div class = "container">
-
-    <div class="form-horizontal form" role="form">
-      <%= form_with(model: @creator, local: true) do |form| %>
-
-        <% if @creator.errors.any? %>
-          <div id="error_explanation" class="col-sm-offset-2 col-sm-10">
-            <h2><%= @creator.errors.count %>件のエラーがあります。</h2>
-            <ul>
-              <% @creator.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-              <% end %>
-            </ul>
-          </div>
-        <% end%>
-
-        <div class= "form-group">
-          <div class="col-sm-12">
-            <p><%= image_tag(@creator.icon.url, :class => "img-responsive center-block", size: "150x150") if @creator.icon.url %></p>
-            <%= form.hidden_field :icon_cache %>
-          </div>
-        </div>
-        
-        <div class= "form-group">
-          <%= form.label :name, class: "col-sm-offset-2 col-sm-2 control-label" %>
-          <div class="col-sm-4">
-            <%= form.text_field :name, class: "form-control" %>
-          </div>
-        </div>
-
-        <div class="form-group">
-          <%= form.label :icon, class: "col-sm-offset-2 col-sm-2 control-label" %>
-          <div class="col-sm-4">
-            <%= form.file_field :icon, id: 'lefile', style:"display:none;" %>
-            <div class="input-group">
-              <input type="text" id="photoCover"  class="form-control" placeholder="select file...">
-              <span class="input-group-btn"><button type="button" class="btn btn-info" onclick="$('input[id=lefile]').click();">画像を選択</button></span>
-            </div>
-
-            <script>
-              $('input[id=lefile]').change(function() {
-                $('#photoCover').val($(this).val().replace("C:\\fakepath\\", ""));
-              });
-            </script>
-
-          </div>
-        </div>
-        
-        <div class="form-group">
-          <div class = "col-sm-offset-4 col-sm-4">
-            <%= form.submit :class => "btn btn-default submit-button" %>
-          </div>
-        </div>
-
-      <% end %>
-    </div>
+  
+    <%= render 'form', creator: @creator %>
 
     <div class = "back-button">
       <%= link_to 'Back', creator_path(@creator.id) %>
     </div>
-
+    
   </div>
 </div>
