--- a/app/views/artworks/folder_index.html.erb
+++ b/app/views/artworks/folder_index.html.erb
@@ -1,10 +1,10 @@
-<div class = "creator-artworks-index">  
+<div class = "folder-artworks-index">  
   <div class="container">
 
-    <h3>フォルダ名 </h3>
+    <h3><%= link_to ("#{@folder.creator.name} の作品"), creator_artworks_path(@folder.creator.id) %> </h3>
 
     <div class = "row">
-      <div class="col-sm-12 col-md-2">
+      <div class="col-xs-12 col-sm-3 col-md-2">
         
         <div class = "folder-dropdown">
           <div class="dropdown">
@@ -14,8 +14,14 @@
             </a>
             <ul class="dropdown-menu" role="menu">
 
-              
-
+            <!-- フォルダ名を一つずつ表示-->
+            <% @folders.each do |folder| %>
+              <!-- folder_artworks_path(folder.id) によって folder の id 付きで artworks#index が呼ばれる -->
+              <%#= link_to artworks_path(folder_id: folder.id) do %>
+              <%= link_to folder_artworks_path(folder.id) do %>
+                <p class = "folder-name"><i class="far fa-folder"></i> <%= folder.folder_name %></p>
+              <% end%>
+            <% end%>
             </ul>
           </div>
         </div>
@@ -31,9 +37,11 @@
             <% end %>
         </div>
 
+        <br>
+
         <div class = modal-display>
           <!-- モーダル表示用のボタン -->
-          <button type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#folder">
+          <button type="button" class="btn btn-info modal-btn btn-sm" data-toggle="modal" data-target="#folder">
             フォルダを追加
           </button>
 
@@ -55,21 +63,19 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
-                  <button type="button" class="btn btn-info">追加</button>
+                  <button type="button" class="btn btn-info modal-btn">追加</button>
                 </div>
               </div>
             </div>
           </div>
         </div>
         
-
         </div>
-        <br>
         
-        <div class="col-sm-12 col-md-10">
+        <div class="col-xs-12 col-sm-6 col-md-10">
           <div class = "row">
             <% @artworks.each do |artwork| %>
-              <div class = "col-xs-12 col-sm-6 col-md-6">
+              <div class = "col-xs-12 col-md-6">
                 <div class = "thumbnail">
                   <div class = "artwork">
                     <%= link_to artwork do%>
