kaminariを使用してページネーション機能を実装

--- a/app/assets/stylesheets/artworks.scss
+++ b/app/assets/stylesheets/artworks.scss
@@ -207,7 +207,10 @@ body {
     font-size: 2rem;
   }
 }
+ 
+.artworks-index, .creator-artworks-index, .folder-artworks-index {
+  .pagination-wrapper {
+    text-align: center;
+  }
+}
 
-// .modal-btn { 
-//   margin-bottom: 15px;
-// }
