--- a/app/views/artworks/folder_index.html.erb
+++ b/app/views/artworks/folder_index.html.erb
@@ -26,7 +26,7 @@
           </div>
         </div>
 
-        <div Class = "folder-list">
+        <div class = "folder-list">
           <h4><span class ="folder-top"><i class="far fa-folder-open"></i> フォルダ</span></h4>
 
             <!-- フォルダ名を一つずつ表示-->
@@ -98,5 +98,10 @@
 
       </div>
     </div>
+
+    <div class = "pagination-wrapper">
+      <%= paginate@artworks %>
+    </div>
+
   </div>
 </div>
