--- a/app/views/artworks/index.html.erb
+++ b/app/views/artworks/index.html.erb
@@ -25,5 +25,10 @@
       </div>
       <% end %>      
     </div>
+
+    <div class = "pagination-wrapper">
+      <%= paginate@artworks %>
+    </div>
+    
   </div>
 </div>
