--- a/app/views/artworks/creator_index.html.erb
+++ b/app/views/artworks/creator_index.html.erb
@@ -4,7 +4,6 @@
     <!--<h3> 全ての作品 </h3>-->
     <h3><%= @creator.name %> の作品</h3>
 
-
     <div class = "row">
       <div class="col-xs-12 col-sm-3 col-md-2">
         
@@ -54,7 +53,6 @@
           フォルダを追加
         </button>
 
-
         <!-- モーダル・ダイアログ -->
         <div class="modal fade" id="folder" tabindex="-1">
           <div class="modal-dialog modal-sm">
@@ -69,7 +67,6 @@
                     <label class = "control-label">フォルダ名</label>
                     <input type="text" class = "form-control">
                   </div> -->
-
 
                   <div class = "form-group">
                     <label class = "control-label">フォルダ名</label>
@@ -117,5 +114,10 @@
 
       </div>
     </div>
+
+    <div class = "pagination-wrapper">
+      <%= paginate@artworks %>
+    </div>
+
   </div>
 </div>
