--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,6 +61,9 @@
                       </ul>
                     </li>
 
+                    <li><%= link_to "マイページ", "# "%>
+                    </li>
+
                     <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
                   <% else %>
                     <%# ログインしていない場合 %>
